# arvis

./: .gitignore  ARVIS_STABILITY_CORE_SPECIFICATIONS.md  AUTHORS_NOTE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  VERSIONING.md  pyproject.toml  repomix-arvis-output.xml
.github/: dependabot.yml  github_PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: github_ISSUE_TEMPLATE_bug_report.md  github_ISSUE_TEMPLATE_feature_request.md  github_ISSUE_TEMPLATE_guarantee_mismatch.md
.github/workflows/: CI.yml  release.yml
arvis/: __init__.py
arvis/action/: __init__.py  action_context.py  action_decision.py  action_evaluator.py  action_mapper.py  action_mode.py  action_policy.py  action_resolver.py  action_template.py
arvis/adapters/: __init__.py  registry.py
arvis/api/: __init__.py  audit.py  cognition.py  commitment.py  engine.py  execution.py  ir.py  ir_canonical.py  ir_diff.py  math.py  memory.py  os.py  os_internals.py  reasoning.py  reflexive.py  runtime_controls.py  runtime_mode.py  signals.py  stability.py  timeline.py  trace.py  version.py
arvis/cognition/: __init__.py
arvis/context/: context_hint_policy_gate.py
arvis/contracts/: cognitive_state_contract.py
arvis/control/: __init__.py  control_context.py  control_inertia.py  control_preferences.py  control_signal.py  control_state.py  onboarding_state.py  understanding_snapshot.py
arvis/conversation/: act_strategy_mapper.py  continuation.py  conversation_adaptive_controller.py  conversation_adaptive_policy.py  conversation_adversarial_detector.py  conversation_attractor_model.py  conversation_cognitive_bridge.py  conversation_coherence_metric.py  conversation_collapse_guard.py  conversation_composite_stability.py  conversation_context.py  conversation_energy_model.py  conversation_entropy_regulator.py  conversation_fast_path.py  conversation_feedback_signal.py  conversation_future_simulator.py  conversation_global_stability_adapter.py  conversation_lyapunov_adapter.py  conversation_memory_bridge.py  conversation_memory_policy.py  conversation_orchestrator.py  conversation_policy_base.py  conversation_policy_engine.py  conversation_predictive_strategy.py  conversation_predictor.py  conversation_regime_controller.py  conversation_stability_controller.py  conversation_stability_signals.py  conversation_state.py  conversation_strategy_dynamics.py  conversation_strategy_field.py  conversation_trajectory_controller.py  conversation_world_prediction_bridge.py  pending_turn.py  response_plan.py  response_plan_builder.py  response_realization_mode.py  response_strategy_decision.py  response_strategy_resolver.py  response_strategy_type.py  (+2 more)
arvis/errors/: README.md  __init__.py  api.py  artifact.py  base.py  classification.py  codes.py  context.py  disposition.py  factories.py  helpers.py  kernel.py  kernel_runtime.py  llm_runtime.py  manager.py  messages.py  normalization.py  observability.py  pipeline.py  policy.py  provenance.py  redaction.py  registry.py  replay.py  runtime.py  runtime_execution.py  runtime_pipeline.py  runtime_scheduler.py  syscall.py  tool_runtime.py  types.py
arvis/host_api/: __init__.py  access.py  cognition.py  control.py  conversation.py  engine.py  knowledge.py  llm.py  memory.py  services.py  telemetry.py  tools.py  vfs.py
arvis/interfaces/: __init__.py  cognitive_bundle.py  cognitive_bundle_protocol.py
arvis/ir/: __init__.py  cognitive_ir.py  context.py  decision.py  envelope.py  gate.py  input.py  state.py  version.py
arvis/kernel/: __init__.py  kernel_contract.py  kernel_invariants.py  replay_engine.py
arvis/kernel_core/: canonicalization.py  host_declaration.py
arvis/knowledge/: knowledge_event.py  knowledge_signal.py  knowledge_snapshot.py  knowledge_state.py
arvis/linguistic/: invariants.py
arvis/math/: __init__.py
arvis/memory/: __init__.py  governance.py  memory_gate.py  memory_intent.py  memory_long_entry.py  memory_long_policy_gate.py  memory_long_projector.py  memory_long_record.py  memory_long_registry.py  memory_long_repository.py  memory_long_service.py  memory_long_snapshot.py
arvis/reasoning/: __init__.py  gap_to_intent_mapper.py  reasoning_gap.py  reasoning_intent.py
arvis/reflexive/: irg_latent_state.py
arvis/runtime/: __init__.py  cognitive_process.py  cognitive_runtime_state.py  cognitive_scheduler.py  cognitive_state.py  pipeline_executor.py  process_hooks.py  resource_model.py  runtime_decision_record.py  runtime_snapshot.py  runtime_snapshot_builder.py  scheduler_decision.py  scheduler_state.py
arvis/signals/: signal.py  signal_event.py  signal_invariants.py  signal_journal.py
arvis/stability/: __init__.py  global_forecast_snapshot.py  multi_horizon_snapshot.py  predictive_snapshot.py  stability_observer.py  stability_snapshot.py  stability_state_projector.py  stability_statistics.py
arvis/telemetry/: __init__.py  event.py  redaction.py  sink.py  types.py
arvis/timeline/: __init__.py  timeline_commitment.py  timeline_consistency_validator.py  timeline_cursor.py  timeline_delta.py  timeline_entry.py  timeline_hashchain.py  timeline_snapshot.py  timeline_types.py  timeline_view.py  timeline_view_types.py  (+1 more)
compliance/: __init__.py  helpers.py
docs/: ARCHITECTURE.md  ARCHITECTURE_INVARIANTS.md  ARVIS_STANDARD_OVERVIEW.md  ARVIS_STANDARD_V1.md  ARVIS_VS_LLM.md  COGNITIVE_STATE.md  GLOSSARY.md  IR.md  OVERVIEW.md  PIPELINE.md  README.md  REFLEXIVE.md  VERSIONS.md  WHY_ARVIS.md
examples/: 00_quickstart_engine.py  01_basic_gate_refusal_DRAFT.py  01_gate_refusal.py  02_deterministic_replay.py  02_replay_determinism.py  03_ir_export.py  03_stability_vs_llm_DRAFT.py  04_human_confirmation.py  05_tool_authorization.py  06_finance_risk_screening.py  07_memory_governed_context.py  08_timeline_audit.py  09_multi_engine_hosting.py  09_multi_run_batch.py  10_runtime_inspection.py  README.md  README_DRAFT.md  video_script_DRAFT.md
scripts/: check_wheel_contents.py  regenerate_beta_manifest.py  run_blackbox_against_wheel.sh  run_examples_smoke.sh  run_quality_gate.sh
tests/: conftest.py
(+1196 files in other folders)
