[project]
name = "arvis"
version = "0.1.0"
description = "Cognitive Operating System kernel for trustworthy AI systems"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name="Julien Lefauconnier", email="jlefauconnier@proton.me" }
]

license = { file = "LICENSE" }

keywords = [
  "ai",
  "cognitive-os",
  "agentic-ai",
  "reasoning",
  "uncertainty",
  "memory",
  "governance",
  "ai-safety"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "jsonschema>=4.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
  "hypothesis",
  "pytest-benchmark",
  "numpy",
]

[project.urls]
Homepage = "https://github.com/Julien-Lefauconnier/arvis"
Repository = "https://github.com/Julien-Lefauconnier/arvis"
Documentation = "https://github.com/Julien-Lefauconnier/arvis/tree/main/docs"
Issues = "https://github.com/Julien-Lefauconnier/arvis/issues"
Changelog = "https://github.com/Julien-Lefauconnier/arvis/releases"

[tool.setuptools.packages.find]
include = ["arvis*"]