[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arvis"
version = "0.1.0"
description = "Cognitive Operating System kernel for trustworthy AI systems"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name="Julien Lefauconnier", email="jlefauconnier@proton.me" }
]

license = { file = "LICENSE" }

keywords = [
  "ai",
  "cognitive-os",
  "agentic-ai",
  "reasoning",
  "uncertainty",
  "memory",
  "governance",
  "ai-safety"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "jsonschema>=4.0",
  "pyyaml>=6.0",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
  "hypothesis",
  "pytest-benchmark",
  "pytest-asyncio",
  "numpy",
]
openai = ["openai>=1.0"]
llm = [
  "openai>=1.0",
  "anthropic",
  "ollama",
]

[project.urls]
Homepage = "https://github.com/Julien-Lefauconnier/arvis"
Repository = "https://github.com/Julien-Lefauconnier/arvis"
Documentation = "https://github.com/Julien-Lefauconnier/arvis/tree/main/docs"
Issues = "https://github.com/Julien-Lefauconnier/arvis/issues"
Changelog = "https://github.com/Julien-Lefauconnier/arvis/releases"

[tool.setuptools.packages.find]
include = ["arvis*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "openai", "openai.*",
  "anthropic", "anthropic.*",
  "ollama", "ollama.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = ["error"]