[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arvis"
version = "0.1.0a10"
description = "Cognitive Operating System kernel for trustworthy AI systems"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name="Julien Lefauconnier", email="jlefauconnier@proton.me" }
]

license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "AUTHORS_NOTE.md"]

keywords = [
  "ai",
  "cognitive-os",
  "agentic-ai",
  "reasoning",
  "uncertainty",
  "memory",
  "governance",
  "ai-safety"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "jsonschema>=4.0",
  "pyyaml>=6.0",
  "pydantic>=2,<3",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  # Gate tools are pinned exactly: the repository's canonical formatting is
  # defined by this ruff version, and mypy/pytest results must be reproducible
  # between local gates and CI (audit 0.1.0a4, tooling reproducibility).
  # Bumping any pin is a deliberate, dedicated commit (re-format if ruff).
  "mypy==1.19.1",
  "ruff==0.14.3",
  "pytest==8.4.2",
  # Plugins stay unpinned until the dev lockfile lands (backlog P2).
  # Stubs for the runtime jsonschema dependency (tool schema validation).
  "types-jsonschema",
  "pytest-cov",
  "pytest-mock",
  "hypothesis",
  "pytest-benchmark",
  "pytest-asyncio",
]

openai = ["openai>=1.0"]
llm = [
  "openai>=1.0",
  "anthropic",
  "ollama",
]

[project.urls]
Homepage = "https://github.com/Julien-Lefauconnier/arvis"
Repository = "https://github.com/Julien-Lefauconnier/arvis"
Documentation = "https://github.com/Julien-Lefauconnier/arvis/tree/main/docs"
Issues = "https://github.com/Julien-Lefauconnier/arvis/issues"
Changelog = "https://github.com/Julien-Lefauconnier/arvis/releases"

[tool.setuptools.packages.find]
include = ["arvis*"]

[tool.setuptools.package-data]
arvis = ["py.typed"]
"arvis.api" = ["schema/*.json"]

[tool.mypy]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "openai", "openai.*",
  "anthropic", "anthropic.*",
  "ollama", "ollama.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests", "compliance"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = ["error"]

asyncio_mode = "auto"
